# subsvocab

./: .gitignore  Cargo.toml  README.md  conjugated_dict.txt  eng-spa.xml  german_subs  parse_dict.sh  parse_xml_dict.sh  project_overview.txt  spanish_subs.net
src/: dict_mapper.rs  main.rs  parser.rs  translator.rs  vocab_list_constructor.rs
