[package]
name = "subsvocab"
version = "0.1.0"
authors = ["rkulskis", "jkulskis"]
edition = "2021"

[dependencies]
scraper = "0.13.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    
    "Window"
]